src/main/java/com/example/cto/error/handler/ExceptionResponse.java
package com.example.cto.error.handler;public class ExceptionResponse {
}
